--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -220,6 +220,10 @@
     margin-bottom: var(--space-8);
 }
 
+.ml-1 {
+    margin-left: var(--space-1);
+}
+
 .ml-2 {
     margin-left: var(--space-2);
 }
